--- a/google_colab_facebook_phone_validator.ipynb
+++ b/google_colab_facebook_phone_validator.ipynb
@@ -6,7 +6,7 @@
       "name": "google_colab_facebook-phone-validator.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO7dVvcydLmXji1gKLlc0Ai",
+      "authorship_tag": "ABX9TyPUSotQiXWLhqqTr97yhCFJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,10 +31,10 @@
       "metadata": {
         "id": "AznsGzVV9oQZ",
         "colab_type": "code",
-        "outputId": "fe6dabd3-3359-4c3a-ae79-e3278121e6eb",
+        "outputId": "ed54c6e5-aa44-438c-f67e-b399fc08392a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 381
+          "height": 1000
         }
       },
       "source": [
@@ -45,31 +45,76 @@
         "import sys\n",
         "sys.path.insert(0,'/usr/lib/chromium-browser/chromedriver')"
       ],
-      "execution_count": 6,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Requirement already satisfied: selenium in /usr/local/lib/python3.6/dist-packages (3.141.0)\n",
-            "Requirement already satisfied: urllib3 in /usr/local/lib/python3.6/dist-packages (from selenium) (1.24.3)\n",
-            "Hit:1 https://cloud.r-project.org/bin/linux/ubuntu bionic-cran35/ InRelease\n",
-            "Ign:2 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  InRelease\n",
-            "Ign:3 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  InRelease\n",
-            "Get:4 http://security.ubuntu.com/ubuntu bionic-security InRelease [88.7 kB]\n",
-            "Hit:5 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu bionic InRelease\n",
-            "Hit:6 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  Release\n",
-            "Hit:7 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  Release\n",
-            "Hit:8 http://archive.ubuntu.com/ubuntu bionic InRelease\n",
-            "Get:9 http://archive.ubuntu.com/ubuntu bionic-updates InRelease [88.7 kB]\n",
-            "Hit:10 http://ppa.launchpad.net/marutter/c2d4u3.5/ubuntu bionic InRelease\n",
-            "Get:12 http://archive.ubuntu.com/ubuntu bionic-backports InRelease [74.6 kB]\n",
-            "Fetched 252 kB in 2s (138 kB/s)\n",
+            "Collecting selenium\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/80/d6/4294f0b4bce4de0abf13e17190289f9d0613b0a44e5dd6a7f5ca98459853/selenium-3.141.0-py2.py3-none-any.whl (904kB)\n",
+            "\u001b[K     |████████████████████████████████| 911kB 3.2MB/s \n",
+            "\u001b[?25hRequirement already satisfied: urllib3 in /usr/local/lib/python3.6/dist-packages (from selenium) (1.24.3)\n",
+            "Installing collected packages: selenium\n",
+            "Successfully installed selenium-3.141.0\n",
+            "Ign:1 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  InRelease\n",
+            "Get:2 https://cloud.r-project.org/bin/linux/ubuntu bionic-cran35/ InRelease [3,626 B]\n",
+            "Hit:3 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu bionic InRelease\n",
+            "Hit:4 http://archive.ubuntu.com/ubuntu bionic InRelease\n",
+            "Get:5 http://archive.ubuntu.com/ubuntu bionic-updates InRelease [88.7 kB]\n",
+            "Get:6 http://security.ubuntu.com/ubuntu bionic-security InRelease [88.7 kB]\n",
+            "Ign:7 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  InRelease\n",
+            "Hit:8 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  Release\n",
+            "Hit:9 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  Release\n",
+            "Get:10 http://ppa.launchpad.net/marutter/c2d4u3.5/ubuntu bionic InRelease [15.4 kB]\n",
+            "Get:11 http://archive.ubuntu.com/ubuntu bionic-backports InRelease [74.6 kB]\n",
+            "Get:14 http://ppa.launchpad.net/marutter/c2d4u3.5/ubuntu bionic/main Sources [1,814 kB]\n",
+            "Get:15 http://archive.ubuntu.com/ubuntu bionic-updates/main amd64 Packages [1,205 kB]\n",
+            "Get:16 http://security.ubuntu.com/ubuntu bionic-security/universe amd64 Packages [844 kB]\n",
+            "Get:17 http://archive.ubuntu.com/ubuntu bionic-updates/universe amd64 Packages [1,376 kB]\n",
+            "Get:18 http://security.ubuntu.com/ubuntu bionic-security/main amd64 Packages [908 kB]\n",
+            "Get:19 http://ppa.launchpad.net/marutter/c2d4u3.5/ubuntu bionic/main amd64 Packages [875 kB]\n",
+            "Fetched 7,294 kB in 3s (2,282 kB/s)\n",
             "Reading package lists... Done\n",
             "Reading package lists... Done\n",
             "Building dependency tree       \n",
             "Reading state information... Done\n",
-            "chromium-chromedriver is already the newest version (81.0.4044.122-0ubuntu0.18.04.1).\n",
-            "0 upgraded, 0 newly installed, 0 to remove and 35 not upgraded.\n",
+            "The following additional packages will be installed:\n",
+            "  chromium-browser chromium-browser-l10n chromium-codecs-ffmpeg-extra\n",
+            "Suggested packages:\n",
+            "  webaccounts-chromium-extension unity-chromium-extension adobe-flashplugin\n",
+            "The following NEW packages will be installed:\n",
+            "  chromium-browser chromium-browser-l10n chromium-chromedriver\n",
+            "  chromium-codecs-ffmpeg-extra\n",
+            "0 upgraded, 4 newly installed, 0 to remove and 35 not upgraded.\n",
+            "Need to get 77.2 MB of archives.\n",
+            "After this operation, 264 MB of additional disk space will be used.\n",
+            "Get:1 http://archive.ubuntu.com/ubuntu bionic-updates/universe amd64 chromium-codecs-ffmpeg-extra amd64 81.0.4044.122-0ubuntu0.18.04.1 [1,095 kB]\n",
+            "Get:2 http://archive.ubuntu.com/ubuntu bionic-updates/universe amd64 chromium-browser amd64 81.0.4044.122-0ubuntu0.18.04.1 [68.8 MB]\n",
+            "Get:3 http://archive.ubuntu.com/ubuntu bionic-updates/universe amd64 chromium-browser-l10n all 81.0.4044.122-0ubuntu0.18.04.1 [3,230 kB]\n",
+            "Get:4 http://archive.ubuntu.com/ubuntu bionic-updates/universe amd64 chromium-chromedriver amd64 81.0.4044.122-0ubuntu0.18.04.1 [4,070 kB]\n",
+            "Fetched 77.2 MB in 3s (22.1 MB/s)\n",
+            "Selecting previously unselected package chromium-codecs-ffmpeg-extra.\n",
+            "(Reading database ... 144429 files and directories currently installed.)\n",
+            "Preparing to unpack .../chromium-codecs-ffmpeg-extra_81.0.4044.122-0ubuntu0.18.04.1_amd64.deb ...\n",
+            "Unpacking chromium-codecs-ffmpeg-extra (81.0.4044.122-0ubuntu0.18.04.1) ...\n",
+            "Selecting previously unselected package chromium-browser.\n",
+            "Preparing to unpack .../chromium-browser_81.0.4044.122-0ubuntu0.18.04.1_amd64.deb ...\n",
+            "Unpacking chromium-browser (81.0.4044.122-0ubuntu0.18.04.1) ...\n",
+            "Selecting previously unselected package chromium-browser-l10n.\n",
+            "Preparing to unpack .../chromium-browser-l10n_81.0.4044.122-0ubuntu0.18.04.1_all.deb ...\n",
+            "Unpacking chromium-browser-l10n (81.0.4044.122-0ubuntu0.18.04.1) ...\n",
+            "Selecting previously unselected package chromium-chromedriver.\n",
+            "Preparing to unpack .../chromium-chromedriver_81.0.4044.122-0ubuntu0.18.04.1_amd64.deb ...\n",
+            "Unpacking chromium-chromedriver (81.0.4044.122-0ubuntu0.18.04.1) ...\n",
+            "Setting up chromium-codecs-ffmpeg-extra (81.0.4044.122-0ubuntu0.18.04.1) ...\n",
+            "Setting up chromium-browser (81.0.4044.122-0ubuntu0.18.04.1) ...\n",
+            "update-alternatives: using /usr/bin/chromium-browser to provide /usr/bin/x-www-browser (x-www-browser) in auto mode\n",
+            "update-alternatives: using /usr/bin/chromium-browser to provide /usr/bin/gnome-www-browser (gnome-www-browser) in auto mode\n",
+            "Setting up chromium-chromedriver (81.0.4044.122-0ubuntu0.18.04.1) ...\n",
+            "Setting up chromium-browser-l10n (81.0.4044.122-0ubuntu0.18.04.1) ...\n",
+            "Processing triggers for hicolor-icon-theme (0.17-2) ...\n",
+            "Processing triggers for mime-support (3.60ubuntu1) ...\n",
+            "Processing triggers for man-db (2.8.3-2ubuntu0.1) ...\n",
             "cp: '/usr/lib/chromium-browser/chromedriver' and '/usr/bin/chromedriver' are the same file\n"
           ],
           "name": "stdout"
@@ -81,7 +126,7 @@
       "metadata": {
         "id": "am5jOX_f6_TE",
         "colab_type": "code",
-        "outputId": "9ed61af2-fb8e-4992-8679-9cbbc39a5ae0",
+        "outputId": "4f21c568-7c10-41ff-981f-906cb7dae536",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 69
@@ -147,33 +192,33 @@
         "                x=\"\"\n",
         "    a=0\n",
         "    if \"The password you’ve entered is incorrect.\" in y:\n",
-        "        r=u+\" [found] \"\n",
+        "        r=u+\" , [found] \"\n",
         "        a=1\n",
         "    if \"is not associated with any Facebook account.\" in y or \"The email or phone number you’ve entered doesn’t match any account.\" in y or \"The phone number you’ve entered doesn’t match any account.\" in y:\n",
-        "        r=u+\" [not found] \"\n",
+        "        r=u+\" , [not found] \"\n",
         "        a=2\n",
         "    if \"Invalid username or password\" in y:\n",
-        "        r=u+\" [Invalid] \"\n",
+        "        r=u+\" , [Invalid] \"\n",
         "        a=3\n",
         "    if a==0:\n",
-        "        r=u+\" [Unknown] \"\n",
+        "        r=u+\" , [Unknown] \"\n",
         "    t2 = time.time()\n",
-        "    r=r+\"- \"+str(round(t2-t1,1))\n",
+        "    r=r+\", \"+str(round(t2-t1,1))\n",
         "    print(r)\n",
         "    if a!=2:\n",
-        "        f.write(u+\"\\n\")\n",
+        "        f.write(r+\"\\n\")\n",
         "driver.quit() \n",
         "f.close()\n",
         "r=\"\"\n"
       ],
-      "execution_count": 13,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "+218925122310 [not found] - 5.5\n",
-            "+218925122410 [not found] - 4.7\n",
-            "+218925122510 [not found] - 4.5\n"
+            "+218925122310 , [not found] , 10.6\n",
+            "+218925122410 , [not found] , 8.3\n",
+            "+218925122510 , [not found] , 8.5\n"
           ],
           "name": "stdout"
         }
